--- a/Contact.html
+++ b/Contact.html
@@ -1,25 +1,12 @@
 <!DOCTYPE html>
 <html lang="id">
-<head> <div id="about"><div class="flex items-start gap-5 mt-4">
-    <div class="bg-white rounded-4xl p-12 w-full shadow-xl">
-      <div class="font-bold text-3xl mb-2">Kontak Kami</div>
-      Saudi Store is a fashion retailer offering a wide range of modern and
-      stylish outfits for both men and women. We provide high-quality
-      clothing options, from casual to semi-formal wear, inspired by global
-      fashion trends with a touch of Middle Eastern flair. With a constantly
-      updated collection and competitive prices, Saudi Store is here to meet
-      your style needs—whether it's for daily wear, hangouts, or special
-      occasions. We also offer online shopping with nationwide shipping
-      across Indonesia, making your shopping experience more practical and
-      convenient.
-    </div>
-
-  <meta charset="UTF-8">
-  <title>Maps Centered</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body class="bg-gray-100">
-  <div class="flex justify-center items-start min-h-screen py-8">
+<head> 
+    <meta charset="UTF-8">
+    <title>Maps Banana Crispy</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
+  <!-- Google Maps -->
+<div class="flex flex-col items-center min-h-screen py-8 px-4">
     <iframe
       src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d4706.045650528197!2d108.19751450981465!3d-7.320506747552082!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e6f572c5a8557fb%3A0x3e72866522bfece5!2sPoliteknik%20LP3I%20Kampus%20Tasikmalaya!5e0!3m2!1sid!2sid!4v1747810266790!5m2!1sid!2sid"
       width="900"
@@ -30,10 +17,28 @@
       referrerpolicy="no-referrer-when-downgrade"
       title="Map showing location of Politeknik LP3I Kampus Tasikmalaya">
     </iframe>
+  
+    <!-- Ikon Sosial Media di bawah maps -->
+    <div class="flex justify-center gap-6 mt-6">
+      <!-- WhatsApp -->
+      <a href="https://wa.me/628" target="_blank" aria-label="WhatsApp" class="hover:scale-110 transition-transform duration-300">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" class="w-9 h-8">
+      </a>
+  
+      <!-- Instagram -->
+      <a href="https://instagram.com/Banana_Crispy" target="_blank" aria-label="Instagram" class="hover:scale-110 transition-transform duration-300">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" class="w-8 h-8">
+      </a>
+  
+      <!-- TikTok -->
+      <a href="https://www.tiktok.com/@your_username" target="_blank" aria-label="TikTok" class="hover:scale-110 transition-transform duration-300">
+    <img src="https://cdn.simpleicons.org/tiktok/000000" alt="TikTok" class="w-7 h-8">
+     </a>
+  
+    </div>
   </div>
 </body>
 </html>
-
       
   
   <div class="mt-4 bg-white p-6 rounded-4xl shadow-xl">
