--- a/Contact.html
+++ b/Contact.html
@@ -17,6 +17,12 @@
       referrerpolicy="no-referrer-when-downgrade"
       title="Map showing location of Politeknik LP3I Kampus Tasikmalaya">
     </iframe>
+
+        <!-- Teks Penjelasan -->
+     <p class="mt-4 text-center text-gray-700 max-w-2xl">
+    Lokasi Banana Crispy berada di dekat Politeknik LP3I Kampus Tasikmalaya. Anda bisa mengunjungi kami langsung di lokasi atau menghubungi kami melalui media sosial di bawah.
+    </p>
+    
   
     <!-- Ikon Sosial Media di bawah maps -->
     <div class="flex justify-center gap-6 mt-6">
