--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <div class=" h-[500px] flex ">
             <img src="/img/Panda.png" style="width: 100%" />
           </div>
-          <div class="justify-between border-amber-100"><span class="">Lorem ipsum dolor sit amet.</span></div>
+          <div class="justify-between border-amber-100"><span class="">Lorem ipsum dolor sit amet..</span></div>
       </div>
 
       <div class=""></div>
