--- a/Kami.html
+++ b/Kami.html
@@ -6,14 +6,15 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Tentang Kami - Banana Crispy</title>
   </head>
-  <body class="bg-yellow-50 text-gray-800">
+  <body class="relative bg-cover bg-center min-h-screen"
+    style="background-image: url('/kelompok-3/img/bg\ babana.jpg')">
     <div class="min-h-screen flex flex-col items-center px-4 py-10">
       <!-- Judul -->
       <h1 class="text-3xl md:text-4xl font-bold mb-4 text-center">
         Tentang Banana Crispy
       </h1>
       <div class="w-16 h-1 bg-yellow-500 rounded-full mb-6"></div>
-
+        
       <!-- Konten -->
       <div class="max-w-3xl bg-white p-8 rounded-2xl shadow-lg space-y-6">
         <p class="text-lg leading-relaxed">
@@ -34,7 +35,7 @@
 
         <!-- Gambar (Opsional) -->
         <img
-          src="/img/bananas.jpg"
+          src="/kelompok-3/img/bananao.jpg"
           alt="Banana Crispy"
           class="rounded-xl w-full shadow-md"
         />
