--- a/Contact.html
+++ b/Contact.html
@@ -2,10 +2,17 @@
 <html lang="id">
   <head>
     <meta charset="UTF-8" />
-    <title>Maps Banana Crispy</title>
+    <title>Maps Banana Crispy-Edit</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body class="bg-yellow-100">
+ <body 
+
+    class="relative bg-cover bg-center min-h-screen"
+    style="background-image: url('/kelompok-3/img/bg\ bnn.jpg')">
+
+    
+  </div>
+
     <div class="flex flex-col items-center min-h-screen py-8 px-4 space-y-6">
       <!-- Kontainer Utama -->
       <div class="mt-20 bg-white p-10 rounded-2xl shadow-xl w-full max-w-xl">
