--- a/Kami.html
+++ b/Kami.html
@@ -7,7 +7,7 @@
     <title>Tentang Kami - Banana Crispy</title>
   </head>
   <body class="relative bg-cover bg-center min-h-screen"
-    style="background-image: url('/kelompok-3/img/bg\ babana.jpg')">
+    style="background-image: url('/img/bg babana.jpg')">
     <div class="min-h-screen flex flex-col items-center px-4 py-10">
       <!-- Judul -->
       <h1 class="text-3xl md:text-4xl font-bold mb-4 text-center">
