--- a/Contact.html
+++ b/Contact.html
@@ -8,7 +8,7 @@
  <body 
 
     class="relative bg-cover bg-center min-h-screen"
-    style="background-image: url('/kelompok-3/img/bg/bnn.jpg')">
+    style="background-image: url('/img/bg bnn.jpg')">
 
     
   </div>
