Update halaman Tentang Kami dengan tampilan baru

--- a/Tentangkami.html
+++ b/Tentangkami.html
@@ -2,49 +2,47 @@
 <html lang="id">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Tentang Kami - Banana Crispy</title>
   </head>
-  <body class="relative bg-cover bg-center min-h-screen"
-    style="background-image: url('/img/bg babana.jpg')">
-    <div class="min-h-screen flex flex-col items-center px-4 py-10">
+  <body 
+    class="relative bg-cover bg-center min-h-screen" 
+    style="background-image: url('/img/bg babana.jpg')"
+  >
+    <div class="min-h-screen flex flex-col items-center px-4 py-10 bg-white bg-opacity-80 rounded-lg mx-4 md:mx-auto max-w-4xl shadow-lg">
+      
       <!-- Judul -->
-      <h1 class="text-3xl md:text-4xl font-bold mb-4 text-center">
+      <h1 class="text-3xl md:text-4xl font-bold mb-4 text-center text-yellow-700">
         Tentang Banana Crispy
       </h1>
       <div class="w-16 h-1 bg-yellow-500 rounded-full mb-6"></div>
         
       <!-- Konten -->
-      <div class="max-w-3xl bg-white p-8 rounded-2xl shadow-lg space-y-6">
+      <div class="max-w-3xl space-y-6 text-gray-800">
         <p class="text-lg leading-relaxed">
-          Banana Crispy adalah UMKM yang berdiri sejak 2023 di Tasikmalaya, Jawa
-          Barat. Kami menyajikan camilan pisang goreng crispy dengan berbagai
-          rasa kekinian yang digemari semua kalangan.
+          Banana Crispy adalah UMKM yang berdiri sejak 2023 di Tasikmalaya, Jawa Barat. Kami menyajikan camilan pisang goreng crispy dengan berbagai rasa kekinian yang digemari semua kalangan.
         </p>
         <p class="text-lg leading-relaxed">
-          Kami percaya bahwa camilan lokal bisa tampil modern, higienis, dan
-          berkualitas. Dengan bahan-bahan pilihan dan pengolahan yang bersih,
-          Banana Crispy hadir sebagai pilihan camilan sehat dan lezat.
+          Kami percaya bahwa camilan lokal bisa tampil modern, higienis, dan berkualitas. Dengan bahan-bahan pilihan dan pengolahan yang bersih, Banana Crispy hadir sebagai pilihan camilan sehat dan lezat.
         </p>
         <p class="text-lg leading-relaxed">
-          Saat ini, kami sudah melayani lebih dari 1000 pelanggan dan terus
-          berkembang dengan berbagai varian rasa seperti coklat, keju, matcha,
-          taro, dan lainnya.
+          Saat ini, kami sudah melayani lebih dari 1000 pelanggan dan terus berkembang dengan berbagai varian rasa seperti coklat, keju, matcha, taro, dan lainnya.
         </p>
 
         <!-- Gambar (Opsional) -->
         <img
-          src="/kelompok-3/img/bananao.jpg"
+          src="/img/bg babana.jpg"
           alt="Banana Crispy"
           class="rounded-xl w-full shadow-md"
         />
 
         <!-- Info Kontak -->
         <div class="text-center mt-6">
-          <h2 class="text-xl font-semibold mb-2">Hubungi Kami</h2>
-        <!-- Ikon Sosial Media -->
-        <div class="mt-4 flex justify-center gap-10">
+          <h2 class="text-xl font-semibold mb-2 text-yellow-700">Hubungi Kami</h2>
+
+          <!-- Ikon Sosial Media -->
+          <div class="mt-4 flex justify-center gap-10">
             <!-- WhatsApp -->
             <a
               href="https://wa.me/6281234567890"
@@ -87,7 +85,6 @@
               />
             </a>
           </div>
-          </p>
         </div>
       </div>
     </div>
