Initial commit banana crispy

--- a/index.html
+++ b/index.html
@@ -131,17 +131,17 @@
           class="text-4xl md:text-5xl font-playfair font-bold text-blue drop-shadow mb-6"
         >
           Selamat Datang di <br />
-          <span class="text-red-300">Banana Crispy</span>
+          <span class="text-blue">Banana Crispy</span>
         </h1>
         <div class="flex justify-center gap-4">
           <a
             href="menu.html"
-            class="px-6 py-2 bg-blue-300 text-black font-semibold rounded-full hover:bg-yellow-400 transition flex items-center gap-2 animate-slide-in-left"
+            class="px-6 py-2 bg-white text-black font-semibold rounded-full hover:bg-yellow-400 transition flex items-center gap-2 animate-slide-in-left"
             >➤ Lihat Menu</a
           >
           <a
             href="tentangkami.html"
-            class="px-6 py-2 border border-white text-white font-semibold rounded-full hover:bg-white hover:text-black transition flex items-center gap-2 animate-slide-in-right"
+            class="px-6 py-2 bg-white text-black font-semibold rounded-full hover:bg-yellow-400 transition flex items-center gap-2 animate-slide-in-right"
             >ℹ️ Tentang Kami</a
           >
         </div>
