--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <!-- Feather Icons -->
     <script src="https://unpkg.com/feather-icons"></script>
 
+    <link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
+
     <!-- Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=Playfair+Display:wght@700&display=swap"
